--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -72,9 +72,9 @@ tr.active {
     background-color: #f9f9f9;
 }
 
-.today {
+/*.today {
     background-color: #d9edf7;
-}
+}*/
 
 @media (max-width: 767px) {
     .navbar-nav .open .dropdown-menu {
