--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -6,117 +6,146 @@
         </h1>
     </div>
 
-    <div class="table-responsive">
-        <table class="table table-condensed table-collapse">
-            <thead>
-            <tr>
-                <th class="col-xs-2">Day</th>
-                <th class="col-xs-2">Pilsner (cl)</th>
-                <th class="col-xs-2">Strong Beer (cl)</th>
-                <th class="col-xs-2">Wine (cl)</th>
-                <th class="col-xs-2">Liquor (cl)</th>
-                <th class="col-xs-2"></th>
-            </tr>
-            </thead>
-            <tbody ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize"
-                   ng-class="{today: isToday(measurement.date)}">
-            <tr ng-click="selectMeasurement(measurement)" style="cursor: pointer">
-                <td>{{measurement.date | date:'dd/MM/yy'}}</td>
-                <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
-                           ng-blur="save(measurement)"></td>
-                <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
-                           ng-blur="save(measurement)"></td>
-                <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
-                           ng-blur="save(measurement)"></td>
-                <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
-                           ng-blur="save(measurement)"></td>
-                <td>
-                    <div class="spinner" ng-show="status[measurement.date] === 'saving'">
-                        <div class="bounce1"></div>
-                        <div class="bounce2"></div>
-                        <div class="bounce3"></div>
-                    </div>
-                    <div>
-                        <i class="glyphicon glyphicon-saved text-success"
-                           ng-show="status[measurement.date] === 'saved'"/>
-                    </div>
-                    <div>
-                        <i class="glyphicon glyphicon-warning-sign text-danger"
-                           ng-show="status[measurement.date] === 'failed'"/>
-                    </div>
-                </td>
-            </tr>
-            <tr collapse="selectedMeasurement !== measurement" class="row-collapse">
-                <td></td>
-                <td class="text-center">
-                    <div class="btn-group" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+    <div class="row" ng-if="!measurements.length">
+        <div class="col-xs-12 ">
+            <div class="spinner">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel panel-primary" ng-if="measurements.length">
+        <div class="panel-heading">
+            <h3 class="panel-title">Today's drinks</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
                                 ng-disabled="disabled">
-                            Add <span class="caret"></span>
+                            Add Pilsner <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#" ng-click="addPilsner(measurement, 25)">25 cl</a></li>
-                            <li><a href="#" ng-click="addPilsner(measurement,33)">33 cl</a></li>
-                            <li><a href="#" ng-click="addPilsner(measurement,50)">50 cl</a></li>
+                        <ul class="dropdown-menu" role="menu" style="width: 100%">
+                            <li><a href="#" ng-click="addPilsner(25)">25 cl</a></li>
+                            <li><a href="#" ng-click="addPilsner(33)">33 cl</a></li>
+                            <li><a href="#" ng-click="addPilsner(50)">50 cl</a></li>
                         </ul>
                     </div>
-                </td>
-                <td class="text-center">
-                    <div class="btn-group" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                </div>
+                <div class="col-sm-3">
+                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
                                 ng-disabled="disabled">
-                            Add <span class="caret"></span>
+                            Add Strong Beer <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#" ng-click="addStrongbeer(measurement,25)">25 cl</a></li>
-                            <li><a href="#" ng-click="addStrongbeer(measurement,33)">33 cl</a></li>
+                        <ul class="dropdown-menu" role="menu" style="width: 100%">
+                            <li><a href="#" ng-click="addStrongbeer(25)">25 cl</a></li>
+                            <li><a href="#" ng-click="addStrongbeer(33)">33 cl</a></li>
                         </ul>
                     </div>
-                </td>
-                <td class="text-center">
-                    <div class="btn-group" dropdown>
-                        <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
+                </div>
+                <div class="col-sm-3">
+                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
                                 ng-disabled="disabled">
-                            Add <span class="caret"></span>
+                            Add Wine <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#" ng-click="addWine(measurement,12)">Small glass (12 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(measurement,17.5)">Medium glass (17.5 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(measurement,25)">Large glass (25 cl)</a></li>
-                            <li><a href="#" ng-click="addWine(measurement,75)">Bottle (75 cl)</a></li>
+                        <ul class="dropdown-menu" role="menu" style="width: 100%">
+                            <li><a href="#" ng-click="addWine(12)">Small glass (12 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(17.5)">Medium glass (17.5 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(25)">Large glass (25 cl)</a></li>
+                            <li><a href="#" ng-click="addWine(75)">Bottle (75 cl)</a></li>
                         </ul>
                     </div>
-                </td>
-                <td class="text-center">
-                    <div class="col-md-3">
-                        <div class="btn-group" dropdown>
-                            <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle
-                                    ng-disabled="disabled">
-                                Add <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#" ng-click="addLiquor(measurement,2.5)">Single shot (2.5 cl)</a></li>
-                                <li><a href="#" ng-click="addLiquor(measurement,4.5)">Double shot (4.5 cl)</a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="btn-group" style="width: 100%; padding-bottom: 5px;" dropdown>
+                        <button type="button" class="btn btn-primary dropdown-toggle btn-block" dropdown-toggle
+                                ng-disabled="disabled">
+                            Add Liquor <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" style="width: 100%">
+                            <li><a href="#" ng-click="addLiquor(2.5)">Single shot (2.5 cl)</a></li>
+                            <li><a href="#" ng-click="addLiquor(4.5)">Double shot (4.5 cl)</a></li>
+                        </ul>
                     </div>
-                </td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tfoot>
-            <tr ng-hide="!measurements" ng-init="pageSize = 25">
-                <th colspan="50">
-                    <div class="text-right">
-                        <pagination ng-init="currentPage = 1" total-items="measurements.length"
-                                    ng-model="currentPage"
-                                    items-per-page="pageSize" class="pagination-sm" max-size="10"
-                                    previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
-                    </div>
-                </th>
-            </tr>
-            </tfoot>
-        </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Past Drinks</h3>
+        </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-condensed table-collapse">
+                    <thead>
+                    <tr>
+                        <th class="col-xs-3">
+                            <small>Pilsner</small>
+                            <span class="hidden-xs">(cl)</span></th>
+                        <th class="col-xs-3">
+                            <small>Strong Beer</small>
+                            <span class="hidden-xs">(cl)</span></th>
+                        <th class="col-xs-3">
+                            <small>Wine</small>
+                            <span class="hidden-xs">(cl)</span></th>
+                        <th class="col-xs-3">
+                            <small>Liquor</small>
+                            <span class="hidden-xs">(cl)</span></th>
+                    </tr>
+                    </thead>
+                    <tbody ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize">
+                    <tr>
+                        <th colspan="1" class="text-left">
+                            {{measurement.date | date:'EEE dd/MM/yy'}}
+                        </th>
+                        <th colspan="3" class="text-right">
+                            <div class="spinner" ng-show="status[measurement.date] === 'saving'">
+                                <div class="bounce1"></div>
+                                <div class="bounce2"></div>
+                                <div class="bounce3"></div>
+                            </div>
+                            <div class="text-success" ng-show="status[measurement.date] === 'saved'">
+                                Saved <i class="glyphicon glyphicon-saved"/>
+                            </div>
+                            <div class="text-danger" ng-show="status[measurement.date] === 'failed'">
+                                Error saving <i class="glyphicon glyphicon-warning-sign"/>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr class="row-collapse">
+                        <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
+                                   ng-blur="save(measurement)"></td>
+                        <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
+                                   ng-blur="save(measurement)"></td>
+                        <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
+                                   ng-blur="save(measurement)"></td>
+                        <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
+                                   ng-blur="save(measurement)"></td>
+                    </tr>
+                    </tbody>
+                    <tfoot>
+                    <tr ng-hide="!measurements" ng-init="pageSize = 25">
+                        <th colspan="50">
+                            <div class="text-right">
+                                <pagination ng-init="currentPage = 1" total-items="measurements.length"
+                                            ng-model="currentPage"
+                                            items-per-page="pageSize" class="pagination-sm" max-size="10"
+                                            previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
+                            </div>
+                        </th>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+
+
+        </div>
     </div>
 
 </div>
